force-app/main/default/objects/JobAttemptWorker__c/JobAttemptWorker__c.object-meta.xml
<CustomObject>
    <label>Job Attempt Worker</label>
    <nameField>
        <displayFormat>JAW-{000000000}</displayFormat>
        <label>Job Attempt Worker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Attempt Workers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>