force-app/main/default/objects/JobAttemptWorker__c/fields/CheckinTime__c.field-meta.xml
<CustomField>
    <fullName>CheckinTime__c</fullName>
    <formula>CheckinTimeEntry__r.StartTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-in Time</label>
    <type>DateTime</type>
</CustomField>