force-app/main/default/objects/JobAttemptWorker__c/fields/CheckinTimeEntry__c.field-meta.xml
<CustomField>
    <fullName>CheckinTimeEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check In Time Entry</label>
    <referenceTo>JobAttemptWorkerTimeEntry__c</referenceTo>
    <relationshipLabel>Job Attempt Workers</relationshipLabel>
    <relationshipName>Job_Attempt_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>