force-app/main/default/objects/JobAttemptWorker__c/fields/CheckinTimeLocal__c.field-meta.xml
<CustomField>
    <fullName>CheckinTimeLocal__c</fullName>
    <formula>CheckinTime__c + (TimezoneOffset__c +   IF( JobAttempt__r.Job__r.Location__r.PostalCode__r.DST__c, $Setup.OneHubCustomSetting__c.DaylightAdjustmentHours__c, 0))/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-in Time Local</label>
    <type>DateTime</type>
</CustomField>