force-app/main/default/objects/JobAttemptWorker__c/fields/CheckoutTime__c.field-meta.xml
<CustomField>
    <fullName>CheckoutTime__c</fullName>
    <formula>CheckoutTimeEntry__r.StartTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-out Time</label>
    <type>DateTime</type>
</CustomField>