force-app/main/default/objects/JobAttemptWorker__c/fields/CheckoutTimeEntry__c.field-meta.xml
<CustomField>
    <fullName>CheckoutTimeEntry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Checkout Time Entry</label>
    <referenceTo>JobAttemptWorkerTimeEntry__c</referenceTo>
    <relationshipLabel>Job Attempt Workers (Checkout Time Entry)</relationshipLabel>
    <relationshipName>Job_Attempt_Workers1</relationshipName>
    <type>Lookup</type>
</CustomField>