force-app/main/default/objects/JobAttemptWorker__c/fields/CheckoutTimeLocalText__c.field-meta.xml
<CustomField>
    <fullName>CheckoutTimeLocalText__c</fullName>
    <formula>IF (ISBLANK(CheckoutTimeLocal__c),&#39;&#39;,TEXT(MONTH(DATEVALUE(CheckoutTimeLocal__c))) + &#39;/&#39; + TEXT(DAY(DATEVALUE(CheckoutTimeLocal__c))) + &#39;/&#39; + TEXT(YEAR(DATEVALUE(CheckoutTimeLocal__c))) + &#39; &#39; + IF (VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2)) &lt;= 12,TEXT(VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2))),TEXT(VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2)) - 12)) + &#39;:&#39; + MID(TEXT(CheckoutTimeLocal__c), 15, 2) + &#39; &#39; + IF (VALUE(MID(TEXT(CheckoutTimeLocal__c), 12, 2)) &lt; 12,&#39;AM&#39;,&#39;PM&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check-out Time Local Text</label>
    <type>Text</type>
</CustomField>