force-app/main/default/objects/JobAttemptWorker__c/fields/ContactAccountType__c.field-meta.xml
<CustomField>
    <fullName>ContactAccountType__c</fullName>
    <formula>TEXT(Contact__r.Account.OneHubAccountType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account Type</label>
    <type>Text</type>
</CustomField>