force-app/main/default/objects/JobAttemptWorker__c/fields/ContactEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ContactEmployeeId__c</fullName>
    <formula>Contact__r.EmployeeId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Employee Id</label>
    <type>Text</type>
</CustomField>