force-app/main/default/objects/JobAttemptWorker__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>