force-app/main/default/objects/JobAttemptWorker__c/fields/ContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ContactLastName__c</fullName>
    <formula>Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Name</label>
    <type>Text</type>
</CustomField>