force-app/main/default/objects/JobAttemptWorker__c/fields/ContactPinHash__c.field-meta.xml
<CustomField>
    <fullName>ContactPinHash__c</fullName>
    <formula>Contact__r.PinHash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact PinHash</label>
    <type>Text</type>
</CustomField>