force-app/main/default/objects/JobAttemptWorker__c/fields/DateAssigned__c.field-meta.xml
<CustomField>
    <fullName>DateAssigned__c</fullName>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>