force-app/main/default/objects/JobAttemptWorker__c/fields/ECWorkerId__c.field-meta.xml
<CustomField>
    <fullName>ECWorkerId__c</fullName>
    <label>EC Worker Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>