force-app/main/default/objects/JobAttemptWorker__c/fields/ECWorkerStatus__c.field-meta.xml
<CustomField>
    <fullName>ECWorkerStatus__c</fullName>
    <label>EC Worker Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>