force-app/main/default/objects/JobAttemptWorker__c/fields/ECWorkerTime__c.field-meta.xml
<CustomField>
    <fullName>ECWorkerTime__c</fullName>
    <label>EC Worker Time</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>