force-app/main/default/objects/JobAttemptWorker__c/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <label>Employee Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>