force-app/main/default/objects/JobAttemptWorker__c/fields/EstimatedMinutes__c.field-meta.xml
<CustomField>
    <fullName>EstimatedMinutes__c</fullName>
    <formula>JobAttempt__r.Job__r.EstimatedMinutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>