force-app/main/default/objects/JobAttemptWorker__c/fields/ExecutionCompany__c.field-meta.xml
<CustomField>
    <fullName>ExecutionCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Attempt Workers</relationshipLabel>
    <relationshipName>Job_Attempt_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>