force-app/main/default/objects/JobAttemptWorker__c/fields/IsCancellable__c.field-meta.xml
<CustomField>
    <fullName>IsCancellable__c</fullName>
    <formula>JobAttempt__r.Job__r.IsCancellable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Cancellable</label>
    <type>Checkbox</type>
</CustomField>