force-app/main/default/objects/JobAttemptWorker__c/fields/IsCheckedIn__c.field-meta.xml
<CustomField>
    <fullName>IsCheckedIn__c</fullName>
    <formula>CheckinTimeEntry__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CheckedIn</label>
    <type>Checkbox</type>
</CustomField>