force-app/main/default/objects/JobAttemptWorker__c/fields/IsCheckedout__c.field-meta.xml
<CustomField>
    <fullName>IsCheckedout__c</fullName>
    <formula>CheckoutTimeEntry__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Checkedout</label>
    <type>Checkbox</type>
</CustomField>