force-app/main/default/objects/JobAttemptWorker__c/fields/IsMobileEditable__c.field-meta.xml
<CustomField>
    <fullName>IsMobileEditable__c</fullName>
    <formula>IF (OR(ContactAccountType__c == &#39;Retailer&#39;,ContactAccountType__c == &#39;3rd Party&#39;),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Mobile Editable</label>
    <type>Checkbox</type>
</CustomField>