force-app/main/default/objects/JobAttemptWorker__c/fields/JobAttempt__c.field-meta.xml
<CustomField>
    <fullName>JobAttempt__c</fullName>
    <label>Job Attempt</label>
    <referenceTo>JobAttempt__c</referenceTo>
    <relationshipLabel>Job Attempt Workers</relationshipLabel>
    <relationshipName>Job_Attempt_Workers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>