force-app/main/default/objects/JobAttemptWorker__c/fields/JobAttemptName__c.field-meta.xml
<CustomField>
    <fullName>JobAttemptName__c</fullName>
    <formula>JobAttempt__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Attempt Name</label>
    <type>Text</type>
</CustomField>