force-app/main/default/objects/JobAttemptWorker__c/fields/LocationAddress__c.field-meta.xml
<CustomField>
    <fullName>LocationAddress__c</fullName>
    <formula>JobAttempt__r.Job__r.Location__r.Address__c + &quot; &quot; + JobAttempt__r.Job__r.Location__r.Address2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>