force-app/main/default/objects/JobAttemptWorker__c/fields/LocationCity__c.field-meta.xml
<CustomField>
    <fullName>LocationCity__c</fullName>
    <formula>JobAttempt__r.Job__r.Location__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location City</label>
    <type>Text</type>
</CustomField>