force-app/main/default/objects/JobAttemptWorker__c/fields/LocationState__c.field-meta.xml
<CustomField>
    <fullName>LocationState__c</fullName>
    <formula>TEXT(JobAttempt__r.Job__r.Location__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location State</label>
    <type>Text</type>
</CustomField>