force-app/main/default/objects/JobAttemptWorker__c/fields/My3PLWork__c.field-meta.xml
<CustomField>
    <fullName>My3PLWork__c</fullName>
    <formula>if( $User.ThirdPartyAgency__c = ThirdPartyAgency__r.Name, True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My3PLWork</label>
    <type>Checkbox</type>
</CustomField>