force-app/main/default/objects/JobAttemptWorker__c/fields/ProjectTitle__c.field-meta.xml
<CustomField>
    <fullName>ProjectTitle__c</fullName>
    <formula>JobAttempt__r.Job__r.Project__r.OperationsTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Title</label>
    <type>Text</type>
</CustomField>