force-app/main/default/objects/JobAttemptWorker__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <formula>JobAttempt__r.AttemptScheduleDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>