force-app/main/default/objects/JobAttemptWorker__c/fields/SupervisorEmail__c.field-meta.xml
<CustomField>
    <fullName>SupervisorEmail__c</fullName>
    <label>Supervisor Email</label>
    <type>Email</type>
</CustomField>