force-app/main/default/objects/JobAttemptWorker__c/fields/SupervisorFirstName__c.field-meta.xml
<CustomField>
    <fullName>SupervisorFirstName__c</fullName>
    <label>Supervisor First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>