force-app/main/default/objects/JobAttemptWorker__c/fields/SupervisorLastName__c.field-meta.xml
<CustomField>
    <fullName>SupervisorLastName__c</fullName>
    <label>Supervisor Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>