force-app/main/default/objects/JobAttemptWorker__c/fields/SupervisorPhone__c.field-meta.xml
<CustomField>
    <fullName>SupervisorPhone__c</fullName>
    <label>Supervisor Phone</label>
    <type>Phone</type>
</CustomField>