force-app/main/default/objects/JobAttemptWorker__c/fields/TeamLeadFirstName__c.field-meta.xml
<CustomField>
    <fullName>TeamLeadFirstName__c</fullName>
    <formula>JobAttempt__r.PrimaryJobAttemptWorker__r.ContactFirstName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead First Name</label>
    <type>Text</type>
</CustomField>