force-app/main/default/objects/JobAttemptWorker__c/fields/TeamLeadLastName__c.field-meta.xml
<CustomField>
    <fullName>TeamLeadLastName__c</fullName>
    <formula>JobAttempt__r.PrimaryJobAttemptWorker__r.ContactLastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead Last Name</label>
    <type>Text</type>
</CustomField>