force-app/main/default/objects/JobAttemptWorker__c/fields/TeamLeadPhone__c.field-meta.xml
<CustomField>
    <fullName>TeamLeadPhone__c</fullName>
    <formula>JobAttempt__r.PrimaryJobAttemptWorker__r.ContactPhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Lead Phone</label>
    <type>Text</type>
</CustomField>