force-app/main/default/objects/JobAttemptWorker__c/fields/ThirdPartyAgency__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3PL Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Attempt Workers (3PL Agency)</relationshipLabel>
    <relationshipName>Job_Attempt_Workers1</relationshipName>
    <type>Lookup</type>
</CustomField>