force-app/main/default/objects/JobAttemptWorker__c/fields/ThirdPartyAgencyBusinessAutoApprove__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyBusinessAutoApprove__c</fullName>
    <formula>AND(ISPICKVAL(WorkerType__c, &quot;Team Lead&quot;),( EstimatedMinutes__c &lt; 240),NOT(ISBLANK( JobAttempt__r.Job__r.JobStartTime__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3PL Business Auto Approve</label>
    <type>Checkbox</type>
</CustomField>