force-app/main/default/objects/JobAttemptWorker__c/fields/ThirdPartyAgencyStatus__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyAgencyStatus__c</fullName>
    <label>3PL Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Canceled - Reassigned to CMK</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Agency Declined</fullName>
            </value>
            <value>
                <fullName>Pending 3PL Agency Approval</fullName>
            </value>
            <value>
                <fullName>CMK Rejected</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>