force-app/main/default/objects/JobAttemptWorker__c/fields/ThirdPartyApprover__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3PL Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Attempt_Workers</relationshipName>
    <type>Lookup</type>
</CustomField>