force-app/main/default/objects/JobAttemptWorker__c/fields/TimeAdjusted__c.field-meta.xml
<CustomField>
    <fullName>TimeAdjusted__c</fullName>
    <label>Time Adjusted (minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>