force-app/main/default/objects/JobAttemptWorker__c/fields/TimezoneOffset__c.field-meta.xml
<CustomField>
    <fullName>TimezoneOffset__c</fullName>
    <formula>JobAttempt__r.Job__r.Location__r.PostalCode__r.Timezoneoffset__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>