force-app/main/default/objects/JobAttemptWorker__c/fields/TotalBillableBreakTime__c.field-meta.xml
<CustomField>
    <fullName>TotalBillableBreakTime__c</fullName>
    <label>Total Billable Break Time</label>
    <summarizedField>JobAttemptWorkerTimeEntry__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>JobAttemptWorkerTimeEntry__c.TimeEntryType__c</field>
        <operation>equals</operation>
        <value>Break</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>JobAttemptWorkerTimeEntry__c.IsBillable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>JobAttemptWorkerTimeEntry__c.JobAttemptWorker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>