force-app/main/default/objects/JobAttemptWorker__c/fields/TotalInStoreBillableTime__c.field-meta.xml
<CustomField>
    <fullName>TotalInStoreBillableTime__c</fullName>
    <formula>TotalInStoreTime__c    -  TotalInStoreNonBillableTime__c +  TimeAdjusted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total In-Store Billable Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>