force-app/main/default/objects/JobAttemptWorker__c/fields/TotalInStoreNonBillableTime__c.field-meta.xml
<CustomField>
    <fullName>TotalInStoreNonBillableTime__c</fullName>
    <label>Total In-Store Non-Billable Time</label>
    <summarizedField>JobAttemptWorkerTimeEntry__c.Duration__c</summarizedField>
    <summaryFilterItems>
        <field>JobAttemptWorkerTimeEntry__c.IsBillable__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>JobAttemptWorkerTimeEntry__c.JobAttemptWorker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>