force-app/main/default/objects/JobAttemptWorker__c/fields/TotalInStoreTime__c.field-meta.xml
<CustomField>
    <fullName>TotalInStoreTime__c</fullName>
    <label>Total In-Store Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>