force-app/main/default/objects/JobAttemptWorker__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <formula>Contact__r.User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserId</label>
    <type>Text</type>
</CustomField>