force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerEmail__c.field-meta.xml
<CustomField>
    <fullName>WorkerEmail__c</fullName>
    <formula>IF (OR(ISBLANK(Email__c),ISNULL(Email__c)),ContactEmail__c, Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Email</label>
    <type>Text</type>
</CustomField>