force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerEmployeeId__c.field-meta.xml
<CustomField>
    <fullName>WorkerEmployeeId__c</fullName>
    <formula>IF (OR(ISBLANK(EmployeeId__c), ISNULL(EmployeeId__c)), ContactEmployeeId__c,EmployeeId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Employee Id</label>
    <type>Text</type>
</CustomField>