force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerFirstName__c.field-meta.xml
<CustomField>
    <fullName>WorkerFirstName__c</fullName>
    <formula>IF (OR(ISBLANK(FirstName__c),ISNULL(FirstName__c)),ContactFirstName__c, FirstName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker First Name</label>
    <type>Text</type>
</CustomField>