force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerLastName__c.field-meta.xml
<CustomField>
    <fullName>WorkerLastName__c</fullName>
    <formula>IF (OR(ISBLANK(LastName__c),ISNULL(LastName__c)),ContactLastName__c,LastName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Last Name</label>
    <type>Text</type>
</CustomField>