force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerPhone__c.field-meta.xml
<CustomField>
    <fullName>WorkerPhone__c</fullName>
    <formula>IF (OR(ISBLANK(Phone__c),ISNULL(Phone__c)),ContactPhone__c,Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Phone</label>
    <type>Text</type>
</CustomField>