force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerPositionId__c.field-meta.xml
<CustomField>
    <fullName>WorkerPositionId__c</fullName>
    <formula>VALUE(RIGHT(Name, 9))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Position Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>