force-app/main/default/objects/JobAttemptWorker__c/fields/WorkerType__c.field-meta.xml
<CustomField>
    <fullName>WorkerType__c</fullName>
    <label>Worker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
                <default>true</default>
                <label>Team Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>