force-app/main/default/objects/JobAttemptWorker__c/validationRules/Assignment_Contact_missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Contact_missing</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
ExecutionCompany__r.AllowUnknownAssignments__c == FALSE, 
NOT(ISBLANK(ContactId__c)), 
ISBLANK(Contact__c ) 

)</errorConditionFormula>
    <errorMessage>Assign Contact does not exist in OneHub</errorMessage>
</ValidationRule>