force-app/main/default/objects/JobAttemptWorker__c/validationRules/Cannot_Cancel_Worker_Already_Started.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_Worker_Already_Started</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c),UPPER(TEXT(Status__c)) == &#39;CANCELED&#39;,IsCheckedIn__c == True)</errorConditionFormula>
    <errorMessage>Cannot cancel worker who has already checked in and started the work.</errorMessage>
</ValidationRule>