force-app/main/default/objects/JobAttemptWorker__c/validationRules/Cannot_Cancel_Worker_Insuff_LeadTime.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Cancel_Worker_Insuff_LeadTime</fullName>
    <active>true</active>
    <description>Cannot cancel workers for a job that does not have sufficient lead time. Will follow rules for job cancellation.</description>
    <errorConditionFormula>AND(ISCHANGED(Status__c),UPPER(TEXT(Status__c)) == &#39;CANCELED&#39;,IsCancellable__c == False)</errorConditionFormula>
    <errorMessage>Cannot cancel worker. Insufficient lead time.</errorMessage>
</ValidationRule>