force-app/main/default/objects/JobAttemptWorker__c/validationRules/Cannot_Change_Asgnmnt_for_Started_Worker.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Asgnmnt_for_Started_Worker</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(ContactId__c),IsCheckedIn__c == True)</errorConditionFormula>
    <errorMessage>Cannot change assignment of a worker who has already checked in and started the work.</errorMessage>
</ValidationRule>