force-app/main/default/objects/JobAttemptWorker__c/validationRules/Reject_Canceled_Worker_Updates.validationRule-meta.xml
<ValidationRule>
    <fullName>Reject_Canceled_Worker_Updates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(UPPER(TEXT(PRIORVALUE(Status__c))) == &#39;CANCELED&#39;, UPPER(TEXT(Status__c)) != &#39;CANCELED&#39;)</errorConditionFormula>
    <errorMessage>This worker has already been canceled. Cannot accept updates.</errorMessage>
</ValidationRule>