force-app/main/default/objects/JobAttemptWorker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CheckinTimeEntry__c</columns>
    <columns>CheckoutTimeEntry__c</columns>
    <columns>DateAssigned__c</columns>
    <columns>JobAttempt__c</columns>
    <columns>TeamLeadUserId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>